# self-driving-car

./: README.md  main.py  pyproject.toml
agents/: base_agent.py  classical_agent.py  pilotnet_agent.py  resnet_agent.py  temporal_agent.py
config/: settings.py
data/: augmentation.py  dataset.py  preprocessing.py  sequence_dataset.py
evaluation/: evaluate.py  metrics.py  visualize.py
models/: cnn_lstm.py  feature_extractor.py  pilotnet.py  resnet_head.py
orchestrator/: confidence.py  orchestrator.py  safety.py
training/: train_classical.py  train_pilotnet.py  train_resnet.py  train_temporal.py  trainer.py
