[project]
name = "tp-02"
version = "0.1.0"
description = "Multi-agent self-driving car steering & throttle prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "numpy>=1.24",
    "pandas>=2.0",
    "opencv-python>=4.8",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "matplotlib>=3.7",
    "Pillow>=10.0",
    "tqdm>=4.65",
    "joblib>=1.3",
]
